hard-gists/11284662/run.log
=== Docker Run Log for 11284662 ===
Started at: Mi 29. Okt 11:54:48 CET 2025

[2025-10-29 11:54:48] START: Running container for 11284662
[2025-10-29 11:54:48] SUCCESS: Container ab01f46a89905a8b8eac5ed67e9d24de22c58e93b2a91151a6629f8b78828aa0 started for 11284662
=== Container logs for 11284662 ===
  File "/snippet.py", line 28
    print repr(manager), "done it!"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11284662 ===
[2025-10-29 11:54:50] INFO: Container ab01f46a89905a8b8eac5ed67e9d24de22c58e93b2a91151a6629f8b78828aa0 has stopped
